# tamlil

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES  pyproject.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
Tamlil/: Info.plist  Package.swift  build.sh
Tamlil/Sources/ObjCSupport/: ExceptionCatcher.m
Tamlil/Sources/ObjCSupport/include/: ExceptionCatcher.h
Tamlil/Sources/Tamlil/: AppState.swift  AudioCaptureSink.swift  AudioSlicePlayer.swift  CallMonitor.swift  Clarifications.swift  CoreAudioSupport.swift  CorrectionPopover.swift  DockPresence.swift  FirstRunView.swift  LexiconDictionary.swift  LoginItem.swift  MainWindowController.swift  Meeting.swift  MeetingDetailView.swift  MeetingPhase.swift  MeetingWaveformPlayer.swift  MenuBarController.swift  MenuBarIcon.swift  MenuView.swift  MicRecorder.swift  NotificationKind.swift  Notifier.swift  NotifyCLI.swift  PipelineRunner.swift  ProcessTapRecorder.swift  RTLText.swift  RecordingStorage.swift  RetentionPolicy.swift  ScreenshotRenderer.swift  SelectableTextView.swift  SelfCheck.swift  SettingsView.swift  SettingsWindowController.swift  SpeakerNames.swift  TamlilApp.swift  TranscriptExport.swift  Updater.swift
Tamlil/icon/: AppIcon.icns  generate_icon.swift
docs/: architecture.md  google-calendar-setup.md  soniox-data-processing.md
scripts/: add-spdx.sh  check-spdx.sh  install.sh  launch-agent.sh  update.sh
src/tamlil/: __init__.py  codeswitch.py  compact.py  denoise.py  google_client.py  google_oauth.py  hallucination.py  lexicon.py  mcp_server.py  meeting_pipeline.py  recording_db.py  recording_layout.py  roster.py  speaker_labels.py  terms.txt  transcribe_soniox.py  util.py
src/tamlil/assets/rnnoise/: README.md
src/tamlil/echo/: __init__.py  __main__.py  dsp.py  report.py  text.py
test-assets/: hebrew_codeswitch.txt
test/container/: Dockerfile  mcp_smoke.py  run.sh  smoke.sh  stage.py
tests/: conftest.py  test_codeswitch.py  test_compact.py  test_echo.py  test_google_oauth.py  test_hallucination.py  test_lexicon.py  test_locate_term.py  test_mcp_server.py  test_outputs.py  test_recording_storage.py  test_roster.py  test_speaker_labels.py  test_transcribe_tracks.py  test_util.py  test_version.py
